# Parallel-Final-Project

./: CMakeLists.txt  README.md  create_dictionary  dictionary.yml  filter_responses  get_dictionary  get_visual_words  gmm_dictionary.yml  harris_detector  kmeans_dictionary.yml  traintest.csv
.cache/clangd/index/: autoencoder.cpp.8C4F34FE5F67116E.idx  createFilterBank.cpp.4054029A6A287843.idx  filters.cpp.2237C7BB9A0E94D1.idx  filters.h.67C9FF9D86F9AFAC.idx  getHarrisPoints.cpp.CD8B5CF681ECC105.idx  getHarrisPoints.h.CEDD051EBEACE7EC.idx  getRandomPoints.cpp.3E9B69D54D50F7CC.idx  getRandomPoints.h.79571D9D93375C68.idx  main.cpp.15F30EFFD2526551.idx
results/cuda/performance_data/: performance_airport_terminal.csv  performance_campus.csv  performance_desert.csv  performance_elevator.csv  performance_forest.csv  performance_kitchen.csv  performance_lake.csv  performance_swimming_pool.csv
results/dbscan/Testing/test_airport_terminal/: sun_acklfjjyqbayxbll.yml  sun_acmkgxudeaydppuw.yml  sun_acmwsqzwbetatsiz.yml  sun_acnbnajpyairiiuf.yml  sun_acnjguohcnitcnrt.yml  sun_acnkuxrpnwjpbtkf.yml  sun_acnnnmofkferpazg.yml  sun_acoxbwmivyqznxov.yml  sun_acpjfokxijlcndqy.yml  sun_acpuwvhrdqhykpsh.yml  sun_acqubrltjfxcogsq.yml  sun_acrejoconpehuldh.yml  sun_acrhuxarsletekwx.yml  sun_acrlvfrnmhybinze.yml  sun_acsfuivwqxpbsugk.yml  sun_actdklfiyesgvutt.yml  sun_actjmoccocdxgwan.yml  sun_actpgbqbdumbrbuq.yml  sun_acuxhoahxppwvdbw.yml  sun_acvbpoxfhwxbwxxr.yml  sun_acvqmmojrymphqxu.yml  sun_acxctmykfrvvhblz.yml  sun_acydkjhptgkxbybt.yml  sun_acyesrkugfuwhvni.yml  sun_acyurcvzexpfrsyb.yml  sun_aczlojbaylsyagmo.yml  sun_aczmttmlupliisro.yml  sun_adaaoydcrfgexlle.yml  sun_adaltaqflaqnwbgi.yml  sun_adbmjeuanhhqlqkh.yml  sun_adbmrbyhsdystkhh.yml  sun_adewfyjawwomcjnz.yml  sun_adgdwcyvmegvkhww.yml  sun_adgqcvptqzzsdvty.yml  sun_adhdbjtrynqigyen.yml  sun_adidcpmxeciffbzf.yml  sun_adiiwobvrdhntvfx.yml  sun_adikgajohahqgeuv.yml  sun_adikkzetyocbqfti.yml  sun_adipfjvazvhomkai.yml  (+1 more)
results/dbscan/Testing/test_campus/: sun_bsxgeevfsmgccjry.yml  sun_btvujmyjnlixtnfb.yml  sun_buglpzhpmmooibek.yml  sun_bugunyckbqwnedtt.yml  sun_bwifiqpscxsvfgae.yml  sun_bwxhozorvtzfycyk.yml  sun_bxcmblyevkreuvfu.yml  sun_bxuglofqznqijzjo.yml  sun_bxuvzwraxjshfykb.yml  sun_bxwzzaswntmwoyml.yml  sun_bxxijjjoasdqqjpj.yml  sun_byqkwwucryiwcxff.yml  sun_byvpksnoabumpkpg.yml  sun_dafbfhztompasyyb.yml  sun_dafrprpnvmexhfnw.yml  sun_datvppjsyjocrdxl.yml  sun_dbauyjukosppkyia.yml  sun_ddgptrwuingtasoh.yml  sun_ddunrwjbuwnvxopz.yml  sun_dehqtundqdrraedj.yml  sun_deopwttsjcidqiue.yml  sun_dewetzmoqvlslscw.yml  sun_dexzcchmjoafkanu.yml  sun_dezwpqftidfwdonk.yml  sun_dfawkvdqcayrtznw.yml  sun_dfbmizxwhhtbinry.yml  sun_dffotuaotrtbyrrc.yml  sun_dfpnwxijxsvjhjyo.yml  sun_dfpxnrtxqxvffqbu.yml  sun_dhsjdcwerdvhzais.yml  sun_difxemcoentmdiza.yml  sun_dkgwykoaztalipgg.yml  sun_dklqwyarpggknuty.yml  sun_dlclspiqkwxdnhgq.yml  sun_dltvhvesmsmilpam.yml  sun_dlujzpwewyxrmjnd.yml  sun_dmdmbcmegrqlcguu.yml  sun_dmyfiizrhnceheac.yml  sun_dnbouqquntzmpwoy.yml  sun_dngnzsuwcmxvutlc.yml  (+4 more)
results/dbscan/Testing/test_desert/: sun_awhsntyjdsqbntyr.yml  sun_awvhktybhzdfbkob.yml  sun_awwfkbrvfgrhwznp.yml  sun_awxkhuiocmlgcisy.yml  sun_axdcfmyrcprgbzuq.yml  sun_axftaijddzvbjaik.yml  sun_axjxedpymqjckfbv.yml  sun_axnrcihhrnmogphy.yml  (+31 more)
results/openmp/performance_data/: performance_airport_terminal.csv  performance_campus.csv  performance_desert.csv  performance_elevator.csv  performance_forest.csv  performance_kitchen.csv  performance_lake.csv  performance_swimming_pool.csv
results/sequential/performance_data/: performance_campus.csv  performance_desert.csv  performance_elevator.csv  performance_forest.csv  performance_kitchen.csv  performance_lake.csv  performance_swimming_pool.csv
src/: batchToVisualWords.cpp  classification.cpp  createDictionaryPickle.py  createFilterBank.cpp  create_csv.cpp  create_dictionary.cpp  create_word_maps.cpp  dbscan.cpp  featureExtraction.cpp  filters.cpp  filters.cu  getDictionary.cpp  getHarrisPoints.cpp  getKmeansDictionary.cpp  getVisualWords.cpp  kmeans_knn_classification.cpp  main.cpp  pipeline.cpp  run_gmm.cpp  save_dictionary_yml.cpp
src/include/: batchToVisualWords.h  classification.h  createFilterBank.h  create_csv.h  create_dictionary.h  create_word_maps.h  dbscan.h  featureExtraction.h  filters.h  getHarrisPoints.h  getVisualWords.h  kmeans_knn_classification.h  run_gmm.h  save_dictionary_yml.h  visual_words.h
src/models/: autoencoder.cpp
src/pythonTestImplementations/: createDictionaryPickle.py  getKmeansDictionary.cpp
src/scripts/: speedup.py  train_autoencoder.py
(+932 files in other folders)
